<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"

    >
    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="380dp" />



    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"

                android:background="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="jennifer83"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@color/colorAccent"
                android:gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_setting"
                android:gravity="center" />



        </RelativeLayout>


        </android.support.v7.widget.Toolbar>

    <ImageView

        android:id="@+id/user_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"

 />



    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_marginTop="8dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_below="@id/profile_image"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_below="@id/user_name"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/about_me"
        android:background="@drawable/edit_button_shape"
        android:text="@string/edit_button"
        android:textSize="17sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:textAllCaps="false" />
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorView"
        android:layout_below="@id/edit_button"

        android:layout_marginTop="40dp" />

    <LinearLayout
        android:id="@+id/count_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/follower_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="768"

            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/following_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="34" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/follow_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/count_layout"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="12dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/folowers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/followers"
            android:textColor="@color/colorView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/colorView"
            android:textSize="16sp"
            android:text="@string/following" />
    </LinearLayout>



</RelativeLayout>